# ut

./: .gitattributes  .gitignore  Undead Trinity.cmd  Undead Trinity.code-workspace  Undead Trinity.esp  Undead Trinity.md
Meshes/UndeadTrinity/: SummonTargetFX.nif
Meshes/UndeadTrinity/SkeletonRace/: SkeletonFeet.nif  SkeletonHands.nif  SkeletonHead.nif  SkeletonTorso.nif
Scripts/Source/: UT_Actor.psc  UT_Effect.psc  UT_Trinity.psc  UT_Workspace.ppj
Undead Trinity/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
Undead Trinity/src/: game.cpp  game.hpp  main.cpp  main.hpp  trinity.cpp  trinity.hpp
